--- a/index.html
+++ b/index.html
@@ -16,8 +16,57 @@
             <a href="#">Menu 3</a>
         </div>
     </header>
-    <main>
+    <main class="principal">
+        <img 
+            src="https://scontent.fmex10-3.fna.fbcdn.net/v/t1.6435-9/65315547_1259434267563628_402042512664952832_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=09cbfe&_nc_eui2=AeGwsVIaCoCXylTzkJj49XyzkZyduFaYcjWRnJ24VphyNbAdporSdY0KEWf49gvOjuw4vQGkrU-57Kf2gw2jCz4g&_nc_ohc=ODmOVgz4YacAX-o30hv&_nc_ht=scontent.fmex10-3.fna&oh=b003e7f2ff42daf4040deb0065d5f456&oe=6161568B" alt="sistemas"
+            class="logo-sistemas"
+        >
+        <h2>INGENIERIA EN SISTEMAS COMPUTACIONALES</h2>
+        <h3>Especialidad en Desarrollo Web y Programacion Movil</h3>
+        <h2>OBJETIVO DE LA CARRERA</h2>
+        <p>
+            Formar profesionistas líderes, analíticos, críticos y creativos, con visión estratégica y amplio 
+            sentido ético, capaces de diseñar, implementar y administrar infraestructura computacional para 
+            aportar soluciones innovadoras en beneficio de la sociedad, en un contexto global, 
+            multidisciplinario y sustentable.
+        </p>
 
+        <img src="http://www.itsur.edu.mx/imagenes/home/slider/2021/SISTEMAS.jpg" alt="sistemas">
+        <h2>ATRIBUTOS DE EGRESO</h2>
+        <ul>
+            <li>Diseñar, configurar y administrar redes computacionales aplicando las normas y estándares vigentes.</li>
+            <li>Desarrollar, implementar y/o administrar software de sistemas o de aplicación cumpliendo con estándares de calidad; participando en proyectos interdisciplinarios.</li>
+            <li>
+                Diseñar e implementar interfaces hombre-máquina y máquina-máquina para la 
+                automatización de sistemas.
+            </li>
+            <li>
+                Diseñar, desarrollar y administrar bases de datos conforme a requerimientos definidos, 
+                normas organizacionales de manejo y seguridad de la información.
+            </li>
+            <li>
+                Integrar soluciones computacionales con diferentes tecnologías, plataformas o dispositivos 
+                vigentes o emergentes.
+            </li>
+            <li>
+                Detectar áreas de oportunidad que le permitan emprender y desarrollar proyectos aplicando 
+                las tecnologías de la información y comunicación con una visión empresarial.
+            </li>
+            <li>
+                Desempeñar sus actividades profesionales considerando los aspectos legales, éticos, sociales 
+                y de desarrollo sustentable.
+            </li>
+            <li>
+                Elaborar protocolos de investigación básica y/o aplicada que fortalezcan el desarrollo 
+                académico, científico y/o tecnológico en el ámbito de sistemas computacionales y disciplinas 
+                afines.
+            </li>
+            <li>
+                Seleccionar y aplicar herramientas matemáticas en el modelado, diseño y desarrollo de 
+                tecnología computacional.
+            </li>
+        </ul>
     </main>
+    
 </body>
 </html>
