imagen itsur https

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             multidisciplinario y sustentable.
         </p>
 
-        <img src="http://www.itsur.edu.mx/imagenes/home/slider/2021/SISTEMAS.jpg" alt="sistemas">
+        <img src="img/SISTEMAS.jpg" alt="sistemas">
         <h2>ATRIBUTOS DE EGRESO</h2>
         <ul>
             <li>Diseñar, configurar y administrar redes computacionales aplicando las normas y estándares vigentes.</li>
